[gd_scene load_steps=9 format=3 uid="uid://c445gi4xyu2qj"]

[ext_resource type="Theme" uid="uid://dp7geumd7i46m" path="res://UI/theme.tres" id="1_qby1p"]
[ext_resource type="Script" path="res://Scenes/settings.gd" id="2_5be5b"]
[ext_resource type="PackedScene" uid="uid://cmr8j8cfpl35u" path="res://Tools/safe_area.tscn" id="3_3gabl"]

[sub_resource type="LabelSettings" id="LabelSettings_0dap1"]
font_size = 28
font_color = Color(0.215686, 0.12549, 0.054902, 1)

[sub_resource type="Animation" id="Animation_y4j84"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 720)]
}

[sub_resource type="Animation" id="Animation_jvf5y"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.36359, 0.210224),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -720)]
}

[sub_resource type="Animation" id="Animation_4wkbn"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.183011, 5.65685),
"update": 0,
"values": [Vector2(0, 720), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rolm3"]
_data = {
"RESET": SubResource("Animation_y4j84"),
"hide": SubResource("Animation_jvf5y"),
"show": SubResource("Animation_4wkbn")
}

[node name="SettingsUI" type="CanvasLayer"]
layer = 127
offset = Vector2(0, 720)
transform = Transform2D(1, 0, 0, 1, 0, 720)
script = ExtResource("2_5be5b")

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qby1p")

[node name="bg" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.984314, 0.94902, 0.921569, 1)

[node name="PanelContainer" type="PanelContainer" parent="Settings"]
layout_mode = 0
offset_left = 66.0
offset_top = 39.0
offset_right = 405.0
offset_bottom = 145.0
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Settings/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.223529, 0.172549, 0.117647, 1)
theme_override_font_sizes/font_size = 32
text = "settings"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -88.0
offset_right = -74.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
text = "back to main menu"

[node name="SettingTabs" type="TabContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 165.0
offset_right = -64.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/icon_max_width = 7
metadata/_edit_group_ = true

[node name="Gameplay" type="PanelContainer" parent="Settings/SettingTabs"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/SettingTabs/Gameplay"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings/SettingTabs/Gameplay/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "hud "
label_settings = SubResource("LabelSettings_0dap1")

[node name="ShowDirectionMarkerContainer" type="HBoxContainer" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/ShowDirectionMarkerContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "show direction markers"

[node name="DirectionMarkerCheckbox" type="CheckButton" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/ShowDirectionMarkerContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="ShowScoreIndicatorContainer" type="HBoxContainer" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/ShowScoreIndicatorContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "show score indicator"

[node name="ScoreIndicatorContainer" type="CheckBox" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/ShowScoreIndicatorContainer"]
layout_mode = 2

[node name="OpenCheatsContainer" type="HBoxContainer" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/OpenCheatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open cheats"

[node name="OpenCheatsButton" type="Button" parent="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/OpenCheatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "open"

[node name="Display" type="PanelContainer" parent="Settings/SettingTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/SettingTabs/Display"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/SettingTabs/Display/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/SettingTabs/Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="label" type="Label" parent="Settings/SettingTabs/Display/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fullscreen"

[node name="CheckButton" type="CheckButton" parent="Settings/SettingTabs/Display/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Input" type="PanelContainer" parent="Settings/SettingTabs"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/SettingTabs/Input"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/SettingTabs/Input/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "keyboard controls"

[node name="WalkLeftContainer" type="HBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="label" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkLeftContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "walk left"

[node name="player_walk_left_bind" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "a"

[node name="WalkLeftConfig" type="Button" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "change"

[node name="WalkRightContainer" type="HBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name=";abel" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkRightContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "walk right"

[node name="player_walk_right_bind" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkRightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "a"

[node name="WalkRightConfig" type="Button" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkRightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "change"

[node name="WalkUpContainer" type="HBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="label" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkUpContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "walk up"

[node name="player_walk_up_bind" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkUpContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "a"

[node name="WalkUpConfig" type="Button" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkUpContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "change"

[node name="WalkDownContainer" type="HBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="label" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkDownContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Walk Down
"

[node name="player_walk_down_bind" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkDownContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "a"

[node name="WalkDownConfig" type="Button" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkDownContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "change"

[node name="PlayerInteractContainer" type="HBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="label" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerInteractContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "interact"

[node name="player_interact_bind" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerInteractContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "a"

[node name="InteractConfig" type="Button" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerInteractContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "change"

[node name="PlayerRunContainer" type="HBoxContainer" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="label" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerRunContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Run"

[node name="player_run_bind" type="Label" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerRunContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "a"

[node name="RunBind" type="Button" parent="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerRunContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "change"

[node name="KeyboardInputPopup" type="Control" parent="Settings"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Settings/KeyboardInputPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qby1p")

[node name="ColorRect" type="ColorRect" parent="Settings/KeyboardInputPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.529412)

[node name="popup" type="PanelContainer" parent="Settings/KeyboardInputPopup/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.5
offset_top = -30.5
offset_right = 219.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/KeyboardInputPopup/Control/popup"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Settings/KeyboardInputPopup/Control/popup/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.215686, 0.12549, 0.054902, 1)
text = "press any key to change input"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rolm3")
}

[node name="SafeArea" parent="." instance=ExtResource("3_3gabl")]
visible = false

[connection signal="pressed" from="Settings/Button" to="." method="hide_and_save_panel"]
[connection signal="toggled" from="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/ShowDirectionMarkerContainer/DirectionMarkerCheckbox" to="." method="toggle_offscreen_marker"]
[connection signal="pressed" from="Settings/SettingTabs/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/OpenCheatsContainer/OpenCheatsButton" to="." method="open_cheats"]
[connection signal="toggled" from="Settings/SettingTabs/Display/MarginContainer/VBoxContainer/HBoxContainer/CheckButton" to="." method="toggle_fullscreen"]
[connection signal="pressed" from="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkLeftContainer/WalkLeftConfig" to="." method="change_input_map" binds= ["player_walk_left"]]
[connection signal="pressed" from="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkRightContainer/WalkRightConfig" to="." method="change_input_map" binds= ["player_walk_right"]]
[connection signal="pressed" from="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkUpContainer/WalkUpConfig" to="." method="change_input_map" binds= ["player_walk_up"]]
[connection signal="pressed" from="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/WalkDownContainer/WalkDownConfig" to="." method="change_input_map" binds= ["player_walk_down"]]
[connection signal="pressed" from="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerInteractContainer/InteractConfig" to="." method="change_input_map" binds= ["player_interact"]]
[connection signal="pressed" from="Settings/SettingTabs/Input/ScrollContainer/MarginContainer/VBoxContainer/PlayerRunContainer/RunBind" to="." method="change_input_map" binds= ["player_run"]]
